added icon to title

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/eca227b50d.js" crossorigin="anonymous"></script>
     <script src="js/countdown.js"></script>
     <title>Welcome to Kraftars</title>
+    <link rel="icon" type="image/x-icon" href="/images/icon.jpg">
 </head>
 <body>
 
