about p style update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="about">
             <h1>A few words about our awesome company</h1>                
             <p>
-                Three young visionaries launch a creative digital marketing company, blending innovation and strategic prowess. Committed to propelling businesses forward with insights, they're the guiding light to online success.
+                Three young visionaries launch a creative digital marketing company, blending innovation and strategic progress. Committed to propelling businesses forward with insights, they're the guiding light to online success.
             </p>
         </section>
         
