instagram link updated

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a href="http://twitter.com"><i class="fa-brands fa-2xl fa-x-twitter"></i></a>
                 </div>
                 <div id="instagram">
-                    <a href="http://instagram.com"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                    <a href="https://www.instagram.com/kraftars_digital/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                 </div>
                 <div id="facebook">
                     <a href="http://facebook.com"><i class="fa-brands fa-facebook-f fa-2xl"></i></a>
