--- a/index.html
+++ b/index.html
@@ -1,54 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/banner.js"></script>
-    <title>Document</title>
-</head>
-<body>
 
-    <div id="preloader">
-        <img src="images/logo.png" alt="">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/banner.css">
+
+  <link rel="stylesheet" href="css/client.css">
+
+  <link rel="stylesheet" href="css/about.css">
+
+  <link rel="stylesheet" href="css/services.css">
+
+  <link rel="stylesheet" href="css/package.css">
+
+  <link rel="stylesheet" href="css/testimonials.css">
+
+  <link rel="stylesheet" href="css/footer.css">
+  <script src="https://kit.fontawesome.com/eca227b50d.js" crossorigin="anonymous"></script>
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="banner">
+
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="images/img_nature_wide.jpg" alt="banner1">
     </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="images/img_snow_wide.jpg" alt="banner2">
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="images/img_mountains_wide.jpg" alt="banner3">
+    </div>
+
+    <a class="prev" onclick="plusSlides(-1)">❮</a>
+    <a class="next" onclick="plusSlides(1)">❯</a>
+
+  </div>
+  <div class="dot-container" style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+  <script src="js/banner.js"></script>
+
+
+  <div class="slider-area">
+    <h2>Our Clients</h2>
+    <div class="wrapper">
+      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
+    </div>
+  </div>
+
+  <!-- <article class="services">
+    <h2>Our Services</h2>
+    <div class="services-container">
+      <div id="service-desc">
+        <p>
+          Lorem ipsum marketing consultency dolor sit amet consectetur adipisicing elit. Saepe nulla nemo repellendus eum excepturi consectetur quo porro perspiciatis distinctio impedit. Asperiores numquam voluptate reiciendis sunt temporibus tempore, explicabo ullam corporis. 
+        </p>
+      </div>
+      <div id="service-names"></div>
+    </div>
+  </article> -->
+
+
+  <article class="services">
+    <h2>Our Services</h2>
+    <div class="service-container">
+      <ul>
+        <li class="service"><a href="#">Social Media Management</a></li>
+        <li class="service"><a href="#">Flex Design</a></li>
+        <li class="service"><a href="#">Marketing Consultaancy</a></li>
+        <li class="service"><a href="#">Web Development</a></li>
+        <li class="service"><a href="#">Photoshoot</a></li>
+        <li class="service"><a href="#">Video Editing</a></li>
+
+      </ul>
+    </div>
+  </article>
+
+
+  <div class="about-container">
+    <div class="image-container">
+      <img src="images/square-image.avif" alt="Square Picture">
+    </div>
+    <div class="content-container">
+      <h1>About Us</h1>
+      <p>
+        Three young visionaries launch a creative digital marketing company, blending innovation and strategic prowess.
+        Committed to propelling businesses forward with insights, they're the guiding light to online success.
+      </p>
+    </div>
+  </div>
+
+
+  <article class="packages">
     <header>
-        <div class="logo" id="navbar">
-            <nav>
-                <ul>
-                    <li>about</li>
-                    <li>contact</li>
-                    <li>gallery</li>
-                    <li>testimonials</li>
-                </ul>
-            </nav>
-            <img src="images/logo.png" alt="logo">
-        </div>
-        <div class="switch invisible" id="left" onclick="swipeLeft()"><p><</p></div>
-        <div class="banner" id="banner1">
-            <p>1</p>
-        </div>
-        <div class="banner" id="banner2">
-            <p>2</p>
-        </div>
-        <div class="banner" id="banner3">
-            <p>3</p>
-        </div>
-        <div class="banner" id="banner4">
-            <p>4</p>
-        </div>
-        <div class="switch" id="right" onclick="swipeRight()"><p>></p></div>
+      <h2>Our Pricing Plans</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi omnis vitae.
+      </p>
     </header>
 
-    <main>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jLHpTVLifMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jLHpTVLifMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/jLHpTVLifMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="package-container">
+      <div class="package">
+        <p class="package-name">normal</p>
+        <p class="package-price">4999/-</p>
+        <div class="package-details">
+          <ul>
+            <li>package details 1</li>
+            <li>package details 2</li>
+            <li>package details 3</li>
+            <li>package details 4</li>
+          </ul>
+        </div>
+      </div>
+      <div class="package">
+        <p class="package-name">advanced</p>
+        <p class="package-price">9999/-</p>
+        <div class="package-details">
+          <ul>
+            <li>package details 1</li>
+            <li>package details 2</li>
+            <li>package details 3</li>
+            <li>package details 4</li>
+          </ul>
+        </div>
+      </div>
+      <div class="package">
+        <p class="package-name">pro</p>
+        <p class="package-price">14999/-</p>
+        <div class="package-details">
+          <ul>
+            <li>package details 1</li>
+            <li>package details 2</li>
+            <li>package details 3</li>
+            <li>package details 4</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </article>
 
-    </main>
+  <article class="testimonials">
+    <header>
+      <h2>Read What Our Customer Says</h2>
+    </header>
+    <div class="testimonial-container">
+      <div class="testimonial fade">
+        <div class="customer-id">
+          <div>
+            <img class="customer-image" src="images/avatar.jpg" alt="">
+          </div>
+          <div class="customer-info">
+            <p class="customer-name">
+              Lorem ipsum
+            </p>
+            <p class="customer-company">Kraftars</p>
+          </div>
+        </div>
+        <div class="testimonial-content">
+          <p>
+            testimonial 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iusto laudantium soluta placeat,
+            optio magnam illum rerum officia fugit error voluptatum ratione, recusandae ipsa odio. Labore quaerat qui
+            fuga impedit!
+          </p>
+        </div>
+      </div>
 
-    <footer>
+      <div class="testimonial fade">
+        <div class="customer-id">
+          <div>
+            <img class="customer-image" src="images/avatar.jpg" alt="">
+          </div>
+          <div class="customer-info">
+            <p class="customer-name">
+              Lorem ipsum
+            </p>
+            <p class="customer-company">Kraftars</p>
+          </div>
+        </div>
+        <div class="testimonial-content">
+          <p>
+            testimonial 2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iusto laudantium soluta placeat,
+            optio magnam illum rerum officia fugit error voluptatum ratione, recusandae ipsa odio. Labore quaerat qui
+            fuga impedit!
+          </p>
+        </div>
+      </div>
 
-    </footer>
+      <div class="testimonial fade">
+        <div class="customer-id">
+          <div>
+            <img class="customer-image" src="images/avatar.jpg" alt="">
+          </div>
+          <div class="customer-info">
+            <p class="customer-name">
+              Lorem ipsum
+            </p>
+            <p class="customer-company">Kraftars</p>
+          </div>
+        </div>
+        <div class="testimonial-content">
+          <p>
+            testimonial 3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iusto laudantium soluta placeat,
+            optio magnam illum rerum officia fugit error voluptatum ratione, recusandae ipsa odio. Labore quaerat qui
+            fuga impedit!
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonial fade">
+        <div class="customer-id">
+          <div>
+            <img class="customer-image" src="images/avatar.jpg" alt="">
+          </div>
+          <div class="customer-info">
+            <p class="customer-name">
+              Lorem ipsum
+            </p>
+            <p class="customer-company">Kraftars</p>
+          </div>
+        </div>
+        <div class="testimonial-content">
+          <p>
+            testimonial 4 Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iusto laudantium soluta placeat,
+            optio magnam illum rerum officia fugit error voluptatum ratione, recusandae ipsa odio. Labore quaerat qui
+            fuga impedit!
+          </p>
+        </div>
+      </div>
+
+      <a class="prev" onclick="tplusSlides(-1)">❮</a>
+      <a class="next" onclick="tplusSlides(1)">❯</a>
+    </div>
+
+    <script src="js/testimonials.js"></script>
+  </article>
+
+
+  <footer>
+
+    <section class="contact">
+      <h2>Contact Us</h2>
+      <p class="contact-card">
+        <a href="mailto:ayanghoshal.kraftars@gmail.com">
+          <i class="fa-solid fa-envelope-open"></i> ayanghoshal.kraftars@gmail.com
+        </a>
+
+      </p>
+      <p class="contact-card">
+        <a href="tel:+919147002014">
+          <i class="fa-solid fa-mobile"></i> (+91) 91470 02014
+        </a>
+      </p>
+      <p class="contact-card">
+        <i class="fa-solid fa-location-dot"></i> Golf Green, Kolkata (pin - 700032)
+      </p>
+    </section>
+
+    <section class="socials">
+      <div id="twitter">
+        <a href="http://twitter.com"><i class="fa-brands fa-2xl fa-x-twitter"></i></a>
+      </div>
+      <div id="instagram">
+        <a href="https://www.instagram.com/kraftars_digital/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+      </div>
+      <div id="facebook">
+        <a href="http://facebook.com"><i class="fa-brands fa-facebook-f fa-2xl"></i></a>
+      </div>
+    </section>
+
+    <section class="info">
+      <p>@2023 All Rights Reserved</p>
+      <p>Maintained by <a href="http://github.com/aradhita2001">aradhita</a></p>
+    </section>
+
+  </footer>
+
+
 </body>
+
 </html>
