--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
   <div class="banner">
 
     <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="images/img_nature_wide.jpg" alt="banner1">
+      <video src="videos/banner.mp4" autoplay ></video>
     </div>
 
     <div class="mySlides fade">
