--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 
+  <link rel="stylesheet" href="css/preloader.css">
+
   <link rel="stylesheet" href="css/header.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/header.js"></script>
@@ -29,6 +31,11 @@
 </head>
 
 <body>
+
+    <div id="preloader">
+      <video src="videos/preloader.mp4" autoplay></video>
+    </div>
+    <script src="js/preloader.js"></script>
 
 	<header>
 		<nav class="navigation">
@@ -58,7 +65,7 @@
   <div class="banner">
 
     <div class="mySlides fade">
-      <video src="videos/banner.mp4" autoplay ></video>
+      <video src="videos/banner.mp4" autoplay loop></video>
     </div>
 
     <div class="mySlides fade">
@@ -86,11 +93,14 @@
   <div class="slider-area">
     <h2>Our Clients</h2>
     <div class="wrapper">
-      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
-      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
-      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
-      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
-      <div class="item"><img style="width: 250px;" alt="" src="images/logo.png"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/clients/amika-creation.jpg"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/clients/cabin17a.jpg"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/clients/click-on-blink.jpg"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/clients/grooverz-band.jpg"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/clients/eyeturners.jpg"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/clients/ikonic.jpg"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/clients/shivayan-boutique.jpg"></div>
+      <div class="item"><img style="width: 250px;" alt="" src="images/clients/grooverz-solo.jpg"></div>
     </div>
   </div>
 
@@ -130,8 +140,7 @@
     <div class="content-container">
       <h2>About Us</h2>
       <p>
-        Three young visionaries launch a creative digital marketing company, blending innovation and strategic prowess.
-        Committed to propelling businesses forward with insights, they're the guiding light to online success.
+        Two young visionaries have joined forces to create a powerhouse in the digital marketing world. Their mission? To propel businesses forward with a fusion of innovation and strategic prowess that sets the digital landscape ablaze.
       </p>
     </div>
   </div>
@@ -139,9 +148,9 @@
 
   <article class="packages">
     <header>
-      <h2>Our Pricing Plans</h2>
+      <h2>Our Packages</h2>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi omnis vitae.
+        With our monthly digital marketing packages, you can harness the full potential of social platforms to grow your brand, connect with your audience, and drive meaningful business outcomes. Let's take your social media presence to new heights together!
       </p>
     </header>
 
@@ -320,7 +329,11 @@
     </section>
 
   </footer>
-
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
 
