--- a/index.html
+++ b/index.html
@@ -65,18 +65,14 @@
   <div class="banner">
 
     <div class="mySlides fade">
-      <video src="videos/banner.mp4" autoplay loop></video>
+      <video src="videos/banner.mp4" muted autoplay loop></video>
     </div>
 
     <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="images/img_snow_wide.jpg" alt="banner2">
+      <img src="images/banner.png" alt="banner2">
     </div>
 
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="images/img_mountains_wide.jpg" alt="banner3">
-    </div>
+   
 
     <a class="prev" onclick="plusSlides(-1)">❮</a>
     <a class="next" onclick="plusSlides(1)">❯</a>
@@ -85,7 +81,6 @@
   <div class="dot-container" style="text-align:center">
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
   </div>
   <script src="js/banner.js"></script>
 
@@ -103,18 +98,6 @@
       <div class="item"><img style="width: 250px;" alt="" src="images/clients/grooverz-solo.jpg"></div>
     </div>
   </div>
-
-  <!-- <article class="services">
-    <h2>Our Services</h2>
-    <div class="services-container">
-      <div id="service-desc">
-        <p>
-          Lorem ipsum marketing consultency dolor sit amet consectetur adipisicing elit. Saepe nulla nemo repellendus eum excepturi consectetur quo porro perspiciatis distinctio impedit. Asperiores numquam voluptate reiciendis sunt temporibus tempore, explicabo ullam corporis. 
-        </p>
-      </div>
-      <div id="service-names"></div>
-    </div>
-  </article> -->
 
 
   <article class="services">
@@ -329,11 +312,6 @@
     </section>
 
   </footer>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=RcLrHqkQmz6SoGd6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
 
