--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <body>
 
     <div id="preloader">
-      <video src="videos/preloader.mp4" autoplay></video>
+      <video id="preloader-bg" src="videos/preloader-bg.mp4" muted autoplay></video>
+      <video id="preloader-video" src="videos/preloader.mp4" muted autoplay></video>
     </div>
     <script src="js/preloader.js"></script>
 
@@ -312,6 +313,19 @@
     </section>
 
   </footer>
+
+  <div class="hidden" style="display: none;">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/9S0Ws-lQJsI?si=UHniXYAWEMT9Rx5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
 
 </body>
 
