--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <div class="about-container">
     <div class="image-container">
-      <img src="images/square-image.avif" alt="Square Picture">
+      <img src="images/about-us.jpeg" alt="Square Picture">
     </div>
     <div class="content-container">
       <h2>About Us</h2>
