--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
   <link rel="stylesheet" href="css/footer.css">
   <script src="https://kit.fontawesome.com/eca227b50d.js" crossorigin="anonymous"></script>
-  <title>Document</title>
+
+  <link rel="shortcut icon" href="images/favicon.png" />
+  <title>Kraftars</title>
 </head>
 
 <body>
