Social links updated
Twitter removed
Linkedin added

--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
         </section>
     
         <section class="socials">
-          <div id="twitter" style="display: none;">
-            <a href="http://twitter.com"><i class="fa-brands fa-2xl fa-x-twitter"></i></a>
+          <div id="linkedin">
+            <a href="https://www.linkedin.com/company/kraftars/"><i class="fa-brands fa-2xl fa-linkedin-in"></i></a>
           </div>
           <div id="instagram">
             <a href="https://www.instagram.com/kraftars_digital/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
