--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
         <section class="contact" id="contact">
           <h2>Contact Us</h2>
           <p class="contact-card">
-            <a href="mailto:info.kraftars@gmail.com">
-              <i class="fa-solid fa-envelope-open"></i> info.kraftars@gmail.com
+            <a href="mailto:contact@kraftars.in">
+              <i class="fa-solid fa-envelope-open"></i> contact@kraftars.in
             </a>
     
           </p>
