social links now open on newpage

--- a/index.html
+++ b/index.html
@@ -276,13 +276,13 @@
     
         <section class="socials">
           <div id="linkedin">
-            <a href="https://www.linkedin.com/company/kraftars/"><i class="fa-brands fa-2xl fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/company/kraftars/" target="_blank" rel="noopener"><i class="fa-brands fa-2xl fa-linkedin-in"></i></a>
           </div>
           <div id="instagram">
-            <a href="https://www.instagram.com/kraftars_digital/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+            <a href="https://www.instagram.com/kraftars_digital/" target="_blank" rel="noopener"><i class="fa-brands fa-instagram fa-2xl"></i></a>
           </div>
           <div id="facebook">
-            <a href="https://www.facebook.com/kraftars/"><i class="fa-brands fa-facebook-f fa-2xl"></i></a>
+            <a href="https://www.facebook.com/kraftars/" target="_blank" rel="noopener"><i class="fa-brands fa-facebook-f fa-2xl"></i></a>
           </div>
         </section>
     
