pinterest website claim

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
   <link rel="shortcut icon" href="images/favicon.png" />
   <title>Kraftars</title>
+
+  <meta name="p:domain_verify" content="8618b19a00976cce8b97d60ed5e9585b"/>
 </head>
 
 <body>
