--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,9 @@
 
       <!-- Logo -->
       <div class="logo">
+        <a href="./index.html">
         <h1><img id="company-logo" src="images/logo.png" alt="company logo"></h1>
+      </a>
       </div>
       
       <!-- Navigation -->
