--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li><a href="#about">About</a></li>
             <!-- <li><a href="#services">Services</a></li> -->
             <li><a href="#package">Packages</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
     
           <div class="humbarger">
