about picture changed

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     
       <div class="about-container" id="about">
         <div class="image-container">
-          <img src="images/about-us.jpeg" alt="Square Picture">
+          <img src="images/family.jpg" alt="Square Picture">
         </div>
         <div class="content-container">
           <p>
