header footer style update

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
           <!-- Logo -->
           <div class="logo">
-            <h1><img id="company-logo" src="images/logo.png" alt="company logo"></h1>
+            <h1><img id="company-logo" src="images/logo-blue-red.png" alt="company logo"></h1>
           </div>
           
           <!-- Navigation -->
