--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
   <link rel="stylesheet" href="css/client.css">
 
+  <link rel="stylesheet" href="css/partner.css">
+
   <link rel="stylesheet" href="css/about.css">
 
   <link rel="stylesheet" href="css/services.css">
@@ -133,6 +135,15 @@
           <div class="item"><img style="width: 250px;" alt="" src="images/clients/ikonic.jpg"></div>
           <div class="item"><img style="width: 250px;" alt="" src="images/clients/shivayan-boutique.jpg"></div>
           <div class="item"><img style="width: 250px;" alt="" src="images/clients/grooverz-solo.jpg"></div>
+        </div>
+      </div>
+
+      <div class="partners">
+        <h2>Our Partners</h2>
+        <!-- <img id="partner-bg" src="images/flower.png" alt="background decoration"> -->
+        <div class="partner-container" id="partner-fg">
+          <div class="partner"><img style="width: 250px;" alt="" src="images/partners/addons.png"></div>
+          
         </div>
       </div>
     
