--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
      -->
       <article class="testimonials">
         <h2>Read What Our Customer Says</h2>
+
+        <div class="testimonial-bg">
+          <img src="./images/testimonial-bg.png" alt="testimonial-bg">
+        </div>
         
         <div class="testimonial-container">
           <div class="testimonial fade">
