--- a/index.html
+++ b/index.html
@@ -207,11 +207,12 @@
       </article>
      -->
       <article class="testimonials">
-        <h2>Read What Our Customer Says</h2>
-
         <div class="testimonial-bg">
-          <img src="./images/testimonial-bg.png" alt="testimonial-bg">
+          <img src="./images/testimonial-bg.png" alt="testimonial-bg  ">
         </div>
+        <h2>Testimonials</h2>
+
+        
         
         <div class="testimonial-container">
           <div class="testimonial fade">
