--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- <li><a href="#">Home</a></li> -->
             <li><a href="#about">About</a></li>
             <!-- <li><a href="#services">Services</a></li> -->
-            <li><a href="#package">Packages</a></li>
+            <!-- <li><a href="#package">Packages</a></li> -->
             <li><a href="./contact.html">Contact</a></li>
           </ul>
     
