service list updated

--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
         <div class="service-container">
           <ul>
             <li class="service">Social Media Management</li>
-            <li class="service">Flex Design</li>
-            <li class="service">Marketing Consultaancy</li>
-            <li class="service">Web Development</li>
-            <li class="service">Photoshoot</li>
+            <li class="service">Graphic Design</li>
+            <li class="service">Marketing Consultancy</li>
             <li class="service">Video Editing</li>
-    
+            <li class="service">Web Development</li>
+            <li class="service">Flex Design</li>
+            <li class="service">Web Design</li>
+            <li class="service">Photo/Videoshoot</li>
           </ul>
         </div>
       </article>
